Correct visibility of icons

--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -137,14 +137,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
+        
         i {
           font-size: 24px;
           color: white;
           margin: 0 10px;
+          opacity:0;
 
           &:hover{
             color: red;
+            
           }
         }
       }
@@ -152,7 +154,10 @@
       &:hover .clicks {
         transform: scale(1.5);
         background: #ffffff61;
-      
+        
+        i {
+          opacity: 1;
+        }
       }
     }
   }
